tests/diagnostic_golden/semantic_actual_type_mismatch.diag
error[CF3110]: Type mismatch in argument
  --> tests/diagnostic_golden/semantic_actual_type_mismatch.f90:7:12
   = stage: semantic
   = help: see docs/errors.md#CF3110
  |
7 |   call foo(1.0)
  |            ^ actual argument conflicts here
  ::: tests/diagnostic_golden\semantic_actual_type_mismatch.f90
  |
4 |       integer x
  |       ~~~ visible dummy declaration here
   = note: This diagnostic comes from the semantic procedure-call matcher, not from parser recovery.
   = help: Compare the visible procedure interface against the actual argument list and procedure kind.
